# raiopdf

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: canary.yml  ci.yml  engine.yml  release.yml
.husky/: pre-push
apps/engine-host/: Cargo.toml
apps/mcp/: package.json  tsconfig.build.json  tsconfig.json  vitest.canary.config.ts  vitest.config.ts
apps/mcp-launcher/: Cargo.toml
apps/shell/: package.json
apps/shell/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.e2e.conf.json  tauri.macos.conf.json  tauri.macos.signing.conf.json  tauri.windows-x64.conf.json  tauri.windows.signing.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/capabilities-e2e/: wdio.json
apps/shell/src-tauri/entitlements/: app.entitlements  jvm.entitlements  node.entitlements
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/scripts/: sign-windows.ps1
apps/shell/src-tauri/src/: diagnostics.rs  e2e_dialog.rs  instance.rs  lib.rs  macos_termination.rs  macos_word_automation.rs  main.rs  mcp.rs  path_ops.rs  print.rs  range_read.rs  sidecar.rs  word.rs
apps/ui/: .gitignore  index.html  package.json  playwright.canary.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
crates/engine-sidecar-core/: Cargo.toml
crates/engine-sidecar-core/src/: docx_scan.rs  lib.rs  path_ops.rs  print_ops.rs  runtime.rs  word_ops.rs
crates/engine-sidecar-core/tests/: print_to_pdf.rs
crates/engine-sidecar-core/tests/fixtures/: build_docx_fixtures.py  build_reflow_pdf_fixtures.py  clean.docx  comments.docx  not-a-zip.docx  tracked-changes.docx
docs/: ARCHITECTURE.md  CASE-CAPTIONS.md  ENGINE-VENDORING.md  EXHIBIT-BINDERS.md  MCP.md  RELEASE-CANARY.md  RELEASE-PACKAGING.md  SIGNING.md  TABLE-OF-AUTHORITIES.md
docs/decisions/: 0002-crash-reporting.md  0003-functional-engine-patches.md  0003-saveable-crash-reports.md  0004-node-one-shot-lane.md
docs/plans/: 2026-07-03-live-test-1-fix-plan.md  direct-click-to-edit-phase0-2026-07-06.md  direct-text-editing-execution-plan-2026-07-05.md  direct-text-editing-plan-2026-07-05.md  edit-text-selection-entry-2026-07-18.md  macos-word-export-plan-2026-07-21.md  offline-legal-workflows-blueprint-2026-07-03.md  offline-legal-workflows-plan-2026-07-03.md
engine/: PINNED_COMMIT  PINNED_PATCHED_FILES_SHA256  PINNED_SETTINGS_GRADLE_SHA256  README.md  build.sh  settings-gradle.patch  vendor.sh  verify-live.sh
engine/patches/: pdfjson-image-passthrough.patch
installer/: PINS.env  PINS.macos-arm64.env  PINS.windows-x64.env  RAIOPDF-LICENSE-NOTICES.txt  README.md  assemble-macos-arm64.sh  assemble-payload.sh  assemble-windows-x64.sh  build-mcp-runtime.mjs  generate-artwork.ps1  ocrmypdf-macos-requirements.txt  ocrmypdf-windows-requirements.txt  payload-manifest.mjs  payload-manifest.test.mjs  platforms.mjs  platforms.test.mjs  prepare-external-bins.mjs  run-payload-assembler.mjs  tauri-platform-config.test.mjs
installer/ocr/: raiopdf_ocr_progress.py  raiopdf_ocr_progress_plugin.py
licenses/: THIRD-PARTY.md
scripts/: assert-e2e-webdriver-not-in-release.mjs  assert-e2e-webdriver-not-in-release.test.mjs  authenticode.mjs  boot-payload-engine.d.ts  boot-payload-engine.mjs  direct-click-edit-live-engine.mjs  direct-click-edit-phase0.mjs  direct-click-edit-phase0.test.mjs  generate-latest-json.mjs  generate-latest-json.test.mjs  generate-legal-notices.mjs  generate-legal-notices.test.mjs  macos-word-automation-harness.mjs  macos-word-automation-harness.test.mjs  minisign.mjs  package-size-baselines.json  pre-push-smoke-gate.sh  prepare-signed-release-assets.mjs  release-assets.test.mjs  release-macos.mjs  run-canary.mjs  scan-macos-min-os.mjs  sign-macos-app-binaries.mjs  sign-macos-app-binaries.test.mjs  sign-macos-payload.mjs  sign-macos-payload.test.mjs  site-release-data.test.mjs  smoke-ocr-progress-wrapper.mjs  smoke-packaged-app.mjs  stamp-shell-version.mjs  validate-package-boundary.mjs  validate-package-boundary.test.mjs  validate-release-assets.mjs
site/: build-help.mjs  index.html  option-a-dawn-break.html  option-b-clearing-storm.html  option-c-golden-hour.html
site/help/: batch-cleanup.html  bates-numbering.html  callout.html  case-caption.html  combine-exhibits.html  comment.html  compress.html  crop.html  data-stays-local.html  draw.html  edit-text.html  form-authoring.html  getting-started.html  highlight.html  image.html  import-word.html  index.html  insert-images.html  insert.html  make-searchable.html  merge.html  page-numbers.html  pages.html  passwords.html  pdf-to-word.html  prepare-for-filing.html  production-set.html  properties.html  (+13 more)
(+435 files in other folders)
