[workspace]
resolver = "2"
members = ["apps/shell/src-tauri", "crates/engine-sidecar-core"]

[patch.crates-io]
# Tauri currently resolves plist 1.9.0, which hard-pins quick-xml 0.39.x.
# Keep plist source stable while allowing the fixed quick-xml line required by RustSec.
plist = { path = "apps/shell/src-tauri/vendor/plist" }
