[package]
name = "engine-sidecar-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
getrandom = "0.3"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.41"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
