[package]
name = "engine-sidecar-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
getrandom = "0.3"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.41"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# LaunchServices is surfaced through NSWorkspace. Keep this macOS-only so the
# core crate stays dependency-light for the sidecars on every other platform.
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", default-features = false, features = ["libc", "NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSString", "NSURL"] }
