[package]
name = "raiopdf-shell"
version = "0.0.0"
description = "RaioPDF desktop shell"
authors = ["Macrify LLC"]
edition = "2021"
build = "build.rs"

[lib]
name = "raiopdf_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "raiopdf-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
engine-sidecar-core = { path = "../../../crates/engine-sidecar-core" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5" }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
